Adding more sites and activating the date filter

--- a/Crawler/config/config.cfg
+++ b/Crawler/config/config.cfg
@@ -256,11 +256,11 @@ extractors = ['newspaper_extractor', 'readability_extractor', 'date_extractor', 
 # It is also possible to only define one date, assigning the other variable the value 'None' to create an half-bounded
 # interval.
 
-start_date = '1999-01-01 00:00:00'
-end_date = '2999-12-31 00:00:00'
+start_date = '2019-01-01 00:00:00'
+end_date = '2019-03-31 00:00:00'
 
 # If 'True' articles without a publishing date are dropped.
-strict_mode = False
+strict_mode = True
 
 
 
@@ -315,6 +315,7 @@ USER_AGENT = 'news-please (+http://www.example.com/)'
 # default: {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100, 'newsplease.crawler.pipeline.HtmlFileStorage':200, 'newsplease.pipeline.pipelines.JsonFileStorage': 300}
 # Further options: 'newsplease.pipeline.pipelines.ElasticsearchStorage': 350
 ITEM_PIPELINES = {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100,
+                 'newsplease.pipeline.pipelines.DateFilter': 150,
                  'newsplease.pipeline.pipelines.HtmlFileStorage':200,
                  'newsplease.pipeline.pipelines.JsonFileStorage':300
                  }
