--- a/Crawler/config/config.cfg
+++ b/Crawler/config/config.cfg
@@ -257,7 +257,7 @@ extractors = ['newspaper_extractor', 'readability_extractor', 'date_extractor', 
 # interval.
 
 start_date = '2019-01-01 00:00:00'
-end_date = '2019-03-31 00:00:00'
+end_date = 'None'
 
 # If 'True' articles without a publishing date are dropped.
 strict_mode = True
@@ -308,7 +308,7 @@ CONCURRENT_REQUESTS_PER_DOMAIN = 4
 
 # User-agent activation
 # default: 'news-please (+http://www.example.com/)'
-USER_AGENT = 'news-please (+http://www.example.com/)'
+USER_AGENT = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36'
 
 # Pipeline activation
 # Syntax: '<relative location>.<Pipeline name>': <Order of execution from 0-1000>
